package com.example.aflah.tracki_master.Auth;

public interface LoginContract {

    interface presenter {
        void loginUser();
    }

    interface view {

    }
}
