@startuml

title __AUTH's Class Diagram__\n

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Auth {
      interface ILogin {
          {abstract} + loginEmailPassword()
          {abstract} + loginSebagaiTamu()
          {abstract} + cekValidasi()
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Auth {
      class LoginActivity {
          ~ btnLogin : Button
          ~ btnMasukTamu : Button
          ~ tvDaftar : TextView
          ~ tvLupaPassword : TextView
          ~ etEmail : RippleValidatorEditText
          ~ etPassword : RippleValidatorEditText
          # onCreate()
          + onClick()
          + loginEmailPassword()
          + loginSebagaiTamu()
          + cekValidasi()
          # onNewIntent()
          - handleIntent()
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Auth {
      interface LoginContract {
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Auth {
      interface presenter {
          {abstract} + loginUser()
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Auth {
      interface view {
      }
    }
  }
  

  package com.example.aflah.tracki_master {
    package com.example.aflah.tracki_master.Auth {
      class LoginPresenter {
      }
    }
  }
  

  LoginActivity -up-|> OnClickListener
  LoginActivity -up-|> ILogin
  LoginActivity -up-|> Activity
  LoginContract +-down- presenter
  LoginContract +-down- view


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
